add logic for getAllProducts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=1536212psp
 
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create-drop every session create and drop db
+#spring.jpa.hibernate.ddl-auto=create-drop  (update)  every session create and drop db
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
